# ctest-unity-example

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  module_1.c  module_1.h  module_2.c  module_2.h  test_suite_3.c
src/module_folder/: module.c  module.h
test/: test_module_1.c  test_module_doesnt_exist.c  test_suite_1.c  test_suite_2.c  test_suite_3.c
test/module_folder/: test_module.c
